di-sample-apex-trigger/main/common/objects/Trigger_Observer__mdt/fields/After_Delete__c.field-meta.xml
<CustomField>
    <fullName>After_Delete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AFTER DELETE</label>
    <type>Checkbox</type>
</CustomField>