di-sample-apex-trigger/main/common/objects/Trigger_Observer__mdt/fields/After_Insert__c.field-meta.xml
<CustomField>
    <fullName>After_Insert__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AFTER INSERT</label>
    <type>Checkbox</type>
</CustomField>