di-sample-apex-trigger/main/common/objects/Trigger_Observer__mdt/fields/Before_Delete__c.field-meta.xml
<CustomField>
    <fullName>Before_Delete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BEFORE DELETE</label>
    <type>Checkbox</type>
</CustomField>