di-sample-apex-trigger/main/common/objects/Trigger_Observer__mdt/fields/Object__c.field-meta.xml
<CustomField>
    <fullName>Object__c</fullName>
    <label>Object</label>
    <referenceTo>EntityDefinition</referenceTo>
    <relationshipLabel>Trigger_Observers</relationshipLabel>
    <relationshipName>Trigger_Observers</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>