di-sample-apex-trigger/main/common/objects/Trigger_Observer__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MasterLabel</columns>
    <columns>Object__c</columns>
    <columns>Apex_Class__c</columns>
    <columns>Test_Only__c</columns>
    <columns>Active__c</columns>
    <columns>Before_Insert__c</columns>
    <columns>Before_Update__c</columns>
    <columns>Before_Delete__c</columns>
    <columns>After_Insert__c</columns>
    <columns>After_Update__c</columns>
    <columns>After_Delete__c</columns>
    <columns>After_Undelete__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>